--- a/Dokumentation/Common/layout.sty
+++ b/Dokumentation/Common/layout.sty
@@ -216,7 +216,7 @@
         \fancyhead[R]{HSLU - T\&A}                             % Kopfzeile rechts
         %
         \fancyfoot[L]{PREN Team 32}                 % Fusszeile links
-        \fancyfoot[C]{HS -2014}                     % Fusszeile zentriert
+        \fancyfoot[C]{HS - 2014}                     % Fusszeile zentriert
         \fancyfoot[R]{\thepage}                     % Fusszeile rechts
         %
         \renewcommand{\headrulewidth}{0.4pt}        % obere Trennlinie
