--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -126,13 +126,12 @@
 		\pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
 		\section{Anhang}
         \subsection{Berechnung}
-            \input{Enddokumentation/Anhang/GlossarBerechnung}
+%            \input{Enddokumentation/Anhang/GlossarBerechnung}
             \input{Enddokumentation/Anhang/BerechnungenSchwungradantrieb}
             \newpage
             \input{Enddokumentation/Anhang/BerechnungDrehmomentFoerderband}
-            \newpage
             \input{Enddokumentation/Anhang/BerechnungHorizontaleAusrichtung}
-    		\newpage
+    		\clearpage
 		\input{Enddokumentation/Anhang/StepperAnhang}
 	\end{appendix}  
 \end{document}
