--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -30,14 +30,13 @@
 		Frameworks (wie beispielsweise OpenCV) wurde verzichtet. Grund dafür 
 		liegt in der statischen Problemstellung: Hintergrund, Korbform und -farbe 
 		sind immer gleich, was die Problemstellung deutlich vereinfacht. Aufgrund 
-		dieser Ausgangslage kann die Erkennungsmechanik relativ einfach gehalten 
-		werden. \\
+		dieser Ausgangslage kann die Erkennungsmechanik einfach gehalten werden. \\
 		\\
 		Der Algorithmus 
 		basiert auf der Tatsache, dass der Korb deutlich dunkler als der 
 		Hintergrund ist. Damit mit einem aufgenommenen Bild gearbeitet werden kann, 
 		müssen die Ränder abgeschnitten werden. Dies ist nötig, da die Kamera einen 
-		grosser horizontaler Öffnungswinkel aufweisen. Dementsprechend geht der 
+		grossen horizontalen Öffnungswinkel aufweist. Dementsprechend geht der 
 		Bildbereich links und rechts deutlich über das Spielfeld 
 		hinaus, was das Resultat verfälschen könnte. Als zweiter Schritt wird 
 		über sämtliche Pixel des Bildes iteriert. Dabei wird für jedes Pixel die 
