--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -1,5 +1,5 @@
 \subsubsection{Förderband}
-Da die Schwungräder durch den Abwurf um ca. 40\% (Berechnung in Formel \ref{equ:AbbremsungBall} im
+Da die Schwungräder durch den Abwurf um ca. 40\% (Berechnung in Formel \ref{equ_Prozentwert} im
 Anhang) abgebremst werden, müssen sie nach jedem Wurf erneut auf die gewünschte Drehzahl
 beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfolgen. Weiter müssen die
 einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit
