Titel- und Deckblatt überarbeitet

--- a/Dokumentation/Anhangsdokument.tex
+++ b/Dokumentation/Anhangsdokument.tex
@@ -1,11 +1,12 @@
-\input{Common/header}
-%\documentclass[a4paper,10pt,fleqn]{article} % Definiert Papier = A4;
+%\input{Common/header}
+\documentclass[a4paper,10pt,fleqn]{article} % Definiert Papier = A4;
                                             % Schriftgrösse = 10Punkte;
                                             % Mathe.-Gl. Modus = linksbündig
                                             % (siehe http://lefti.amigager.de/latex/Aufbau.html)
 
-%\usepackage{Common/Layout}
-\newcommand{\myTitel}{Anhang zur Dokumentation}
+\usepackage{common/Layout}
+\newcommand{\myTitel}{Anhang zur Schlussdokumentation}
+\newcommand{\myDokumentTyp}{Anhangsdokument}
 \begin{document}
     %
     % Deck- und Titelblatt
