--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -1,6 +1,8 @@
 \begin{titlepage}
-    \begin{center}     
-        \parindent0pt{\Huge PREN 1, TEAM 32}\\
+    \begin{center}
+        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\
+        \vspace*{0.5cm}
+        {\huge PREN 1, Team 32}\\
         \vspace*{1.2cm}
         Yves Studer\\
         Thomas Wiss\\
@@ -9,14 +11,14 @@
         Matteo Trachsel\\
         Güdel Manuel\\
         Pascal Roth\\
-        \vspace*{1.2cm}
-        {\Huge \myTitel}\\
         \vspace*{1cm}
+        {\Huge \myTitel}\\
+        \vspace*{0.5cm}
         \begin{figure*}[h!]
             \centering
             \includegraphics[width=0.7\textwidth]{Enddokumentation/Titelbild.JPG}
         \end{figure*}
-        \vspace*{2cm}
+        \vspace*{1cm}
         {\normalsize Hochschule Luzern - Technik \& Architektur}\\
         {\normalsize PREN 1}\\
         \vspace*{0.6cm}
