--- a/Dokumentation/Common/Titelblatt.tex
+++ b/Dokumentation/Common/Titelblatt.tex
@@ -1,7 +1,9 @@
 \begin{titlepage}
     \begin{center}
-        {\Huge PREN 1, TEAM 32\par}
-        \vspace{3em}
+        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\
+		\vspace*{0.5cm}
+		{\huge PREN 1, Team 32}\\
+		\vspace{2em}
         \begin{tabular}{ll}
         Yves Studer                & Thomas Wiss \\
         Dorfstrasse 28             & Bachhüsliweg 4a \\
@@ -28,13 +30,13 @@
         pascal.roth@stud.hslu.ch   & \\
         \end{tabular}\\
         \vspace{5em}
-        {\huge \myTitel\par}
+        {\Huge \myTitel}\\
         \vspace{5em}
         Dozent: Markus Thalmann\\
         \vspace{2em}
         Hochschule Luzern - Technik \& Architektur \\   
         Interdisziplinäre Projektarbeit 2014
-        \vspace{13em}\\
+        \vspace{8em}\\
         Horw, Hochschule Luzern - T\&A, \today
     \end{center}
 \end{titlepage}
