--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -10,15 +10,16 @@
 \newcommand{\EtPath}{Enddokumentation/ET_Gruppe/BLDC}
 \input{Enddokumentation/ET_Gruppe/common/booleans}
 \setboolean{EMBED}{true}
-\newcommand{\myTitel}{Dokumentation}
+\newcommand{\myTitel}{Konzept und Planung\\eines autonomen Ballwerfers}
+\newcommand{\myDokumentTyp}{Schlussdokumentation }
 \newcommand{\BLDCTeams}{T27 und T32}
 \newcommand{\BLDCcollab}{Dieses Kapitel ist eine Zusammenarbeit der Gruppen \BLDCTeams. }
 \begin{document}
     %
     % Deck- und Titelblatt
     %
-    \input{Common/Deckblatt}
-    \input{Common/Titelblatt}
+    \input{common/Deckblatt}
+    \input{common/Titelblatt}
     %
     % Management Summary
     % 
