Anhangsdokument auf neues Layout migriert

--- a/Dokumentation/Anforderungsliste/Anforderungsliste.tex
+++ b/Dokumentation/Anforderungsliste/Anforderungsliste.tex
@@ -55,9 +55,12 @@
     W: Wunschziel\\
     *: Anforderung kann je nach Umsetzung stark variieren\\
     \vspace*{12cm}\\
-    \begin{tabular}{|p{2.1cm}|p{6.4cm}|p{1cm}|p{1.5cm}|}\hline
-    Erstellt durch & Dozent akzeptiert & Version & \# Seiten\\ \hline 
-    Team 32        &                   &  1.0    & \thepage\\
-                   &                   &         & \\
-                   &                   &         & \\ \hline
-    \end{tabular}
+    \begin{figure}[b]
+	    \centering
+	    \begin{tabular}{|p{2.1cm}|p{6.4cm}|p{1cm}|p{1.5cm}|}\hline
+	    Erstellt durch & Dozent akzeptiert & Version & \# Seiten\\ \hline 
+	    Team 32        &                   &  1.0    & \thepage\\
+	                   &                   &         & \\
+	                   &                   &         & \\ \hline
+	    \end{tabular}
+    \end{figure}
