Anhangsdokument auf neues Layout migriert

--- a/Dokumentation/Anhangsdokument.tex
+++ b/Dokumentation/Anhangsdokument.tex
@@ -22,34 +22,21 @@
     
 
 
-     \section{Aufgabenstellung}
-	     \includegraphics[page=1,scale=0.86,clip,trim=33mm 40mm 20mm 30mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=2,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=3,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=4,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=5,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=6,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-	     \newpage
-	     \includegraphics[page=7,scale=0.86,clip,trim=32mm 20mm 20mm 22mm] {Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
-     
+    \includepdf[page=1 , offset=0cm -1.9cm, width=1\textwidth,picturecommand={\centering},pagecommand=\section{Aufgabenstellung}{\thispagestyle{fancy}},]{Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
+    
+    \includepdf[page=2- , offset=0cm -1.35cm, width=1\textwidth,picturecommand={\centering},pagecommand={\thispagestyle{fancy}},]{Anhangsdokument/Aufgabenstellung_PREN1_H14.pdf}
      
      \begin{landscape}
      	\section{Risikokatalog}
 			\includegraphics[page=1,scale=0.73,clip,trim=17mm 27mm 31mm 39mm]{Anhangsdokument/Risikomanagement.pdf}
 			\newpage  			
-			\includegraphics[page=2,scale=0.90,clip,trim=17mm 22mm 21mm 32mm]{Anhangsdokument/Risikomanagement.pdf}
+			\includegraphics[page=2,scale=1,clip,trim=20mm 22mm 21mm 32mm]{Anhangsdokument/Risikomanagement.pdf}
 			\newpage  			
-			\includegraphics[page=3,scale=0.90,clip,trim=17mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}
+			\includegraphics[page=3,scale=1,clip,trim=20mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}
 			\newpage  			
-			\includegraphics[page=4,scale=0.90,clip,trim=17mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}
+			\includegraphics[page=4,scale=1,clip,trim=20mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}
 			\newpage  			
-			\includegraphics[page=5,scale=0.90,clip,trim=17mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}
-\newpage	
+			\includegraphics[page=5,scale=1,clip,trim=20mm 22mm 21mm 22mm]{Anhangsdokument/Risikomanagement.pdf}	
      \end{landscape} 
      
      
@@ -76,20 +63,20 @@
   	 %  Detaillierte Berechnungen 
   	 
   	 %  Versuche und Tests: Details, Messprotokolle etc.
-  	 \includegraphics[page=1,width=\textwidth]{Funktionstests/Ballmaschine.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Funktionstests/Ballmaschine.pdf}
   	 \newpage
-  	 \includegraphics[page=1,width=\textwidth]{Funktionstests/BallmaschineDrehzahl.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Funktionstests/BallmaschineDrehzahl.pdf}
   	 \newpage
-  	 \includegraphics[page=1,width=\textwidth]{Funktionstests/Pneumatikzylinder.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Funktionstests/Pneumatikzylinder.pdf}
   	 \newpage
-  	 \includegraphics[page=1,width=\textwidth]{Funktionstests/Acrylglas.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Funktionstests/Acrylglas.pdf}
   	 \newpage
   	 
   	 
   	 %  Meilensteinberichte, Protokolle, Pendenzenlisten
-  	 \includegraphics[page=1,width=\textwidth]{Anhangsdokument/Besprechung_MS1.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Anhangsdokument/Besprechung_MS1.pdf}
   	 \newpage
-  	 \includegraphics[page=1,width=\textwidth]{Anhangsdokument/Besprechung_MS2.pdf}
+  	 \includegraphics[page=1,width=1\textwidth]{Anhangsdokument/Besprechung_MS2.pdf}
 
 
     
